refactored log out button